--- a/AocFS.fsproj
+++ b/AocFS.fsproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Program.fs" />
+	  <Compile Include="Day2.fs" />
+	  <Compile Include="Day1.fs" />
+	  <Compile Include="Program.fs" />
   </ItemGroup>
 
 </Project>
